# NCSLab

./: .gitignore  .wget-hsts  package-lock.json
catkin_ws/: README.md
catkin_ws/src/unitree_ros/robots/dexterous_hand_description/dex5_1/: Dex5-URDF-L.urdf  Dex5-URDF-R.urdf
ros_ws/src/locosim/: .gitmodules  loco-install.sh
ros_ws/src/locosim/robot_control/scripts/: README.md  go1_controller.py
ros_ws/src/locosim/robot_descriptions/gazebo_plugins/set_damping_plugin/: CMakeLists.txt  package.xml
ros_ws/src/locosim/robot_descriptions/gazebo_plugins/set_damping_plugin/src/: dynamic_joint_damping_plugin.cpp
ros_ws/src/locosim/robot_descriptions/gazebo_plugins/set_damping_plugin/srv/: SetFloat.srv
ros_ws/src/locosim/robot_descriptions/gazebo_plugins/set_mass_plugin/: CMakeLists.txt  package.xml
ros_ws/src/locosim/robot_descriptions/gazebo_plugins/set_mass_plugin/src/: SetMassPlugin.cpp
ros_ws/src/locosim/robot_urdf/: ur4.urdf  ur4_2links.urdf  ur5.urdf
weekly report/: Weekly Progress Report.docx  time report.xlsx
